fixed scrollbar lock bugs with fixed content

--- a/frontend/components/AccessibilityMenu/AccessibilityMenu.module.scss
+++ b/frontend/components/AccessibilityMenu/AccessibilityMenu.module.scss
@@ -8,6 +8,7 @@
   bottom: $margin;
   right: $margin;
   z-index: var(--zIndexSettingsMenu);
+  margin-right: var(--scroll-padding, 0px);
 
   &.hidden {
     display: none;
