--- a/frontend/components/FacePictureBlock/FacePictureBlock.module.scss
+++ b/frontend/components/FacePictureBlock/FacePictureBlock.module.scss
@@ -3,7 +3,6 @@
 .facePictureBlock {
   position: relative;
   height: calc(100vh - var(--heightHeader));
-  width: 100%;
   z-index: 1;
   clip-path: inset(0);
 
@@ -23,6 +22,7 @@
     left: 0;
     top: calc(-1 * var(--heightHeader));
     height: calc(100% + var(--heightHeader));
+    padding-right: var(--scroll-padding, 0px);
   }
 
   &__inner {
@@ -33,7 +33,6 @@
     justify-content: center;
     gap: .5rem;
     z-index: 2;
-    width: 100%;
     height: 100%;
   }
 }
