--- a/frontend/styles/main/globals.scss
+++ b/frontend/styles/main/globals.scss
@@ -60,7 +60,7 @@ body {
   color: var(--colorText);
   overflow: overlay;
   -webkit-overflow-scrolling: touch;
-  border-right: var(--padding-right, 0px) solid var(--colorBgDark);
+  border-right: var(--scroll-padding, 0px) solid var(--colorBgDark);
 }
 
 ul {
